<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.quizproject.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:src="@drawable/podium"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingBottom="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/player"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="name"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/Q1"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Choice1"
                android:textSize="16sp"
                android:layout_marginLeft="16dp" />

            <RadioButton
                android:id="@+id/RadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Choice2"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/Q2"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <CheckBox
            android:id="@+id/Q2_Choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Choice1"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q2_Choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Choice2"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q2_Choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Choice3"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q2_Choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Choice4"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/Q3"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <CheckBox
            android:id="@+id/Q3_Choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Choice1"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q3_Choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Choice2"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q3_Choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Choice3"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q3_Choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Choice4"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/Q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/Q4"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <CheckBox
            android:id="@+id/Q4_Choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4_Choice1"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q4_Choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4_Choice2"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q4_Choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4_Choice3"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q4_Choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4_Choice4"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/Q5"
            android:textSize="20sp"
            android:paddingLeft="16dp"/>

        <CheckBox
            android:id="@+id/Q5_Choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5_Choice1"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q5_Choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5_Choice2"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q5_Choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5_Choice3"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <CheckBox
            android:id="@+id/Q5_Choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5_Choice4"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:paddingLeft="16dp" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingBottom="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submitQuiz"
            android:text="submit"
            android:textAllCaps="true"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>
